# book-scan-to-md

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
data/output/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: DOCUMENTATION.md  EXAMPLES.md  QUICKSTART.md
scripts/: __init__.py  batch_convert.py  convert_pdf_to_md.py
